# testBrioCare

./: .env.example  .gitignore  RAILWAY.md  README.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  vercel.json
Listen Labs/: BrioCare - Parent Attitudes Toward AI-Assisted Pediatric Group Therapy - Responses.csv  BrioCare_-_Parent_Attitudes_Toward_AI-Assisted_Pediatric_Group_Therapy (1).docx
api/: run.py
docs/: PLAN.md
public/: index.html
server/: __init__.py  app.py  daily.py  dump.py  notes.py  phraser.py  privacy.py  protocol.py  requirements.txt  room.py  safety.py
server/scripts/: group_checkin.yaml  solo_checkin.yaml
server/static/: animals.js  kid.html  landing.html  therapist.html
src/briocare/: cli.py  websim.py
src/briocare/io/: facilitator_sink.py  participant_source.py
src/briocare/runtime/: actions.py  clock.py  events.py  machine.py  policies.py  state.py
src/briocare/scripts/: loader.py  schema.py
src/briocare/sim/: harness.py  transcript.py
tests/: conftest.py  test_app_rooms.py  test_clinician_override.py  test_clock.py  test_daily.py  test_dump.py  test_feelings_rating.py  test_live_room.py  test_loader.py  test_machine_pacing.py  test_machine_participation.py  test_machine_turn_taking.py  test_menu_activities.py  test_notes.py  test_participation_engine.py  test_phraser.py  test_policies.py  test_privacy.py  test_protocol.py  test_safety.py  test_schema.py  test_sim_harness.py  test_websim.py
tests/fixtures/: checkin.yaml  transcript_happy_path.txt  transcript_override.txt  transcript_quiet_kid.txt
