[project]
name = "briocare"
version = "0.1.0"
description = "Session scaffolding + scripting engine for an AI group-therapy facilitator (text-sim milestone)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Live voice-demo server (FastAPI + WebSockets + Claude phraser). Optional: the
# core engine + text sim never need these. Install with `uv sync --extra server`.
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "anthropic>=0.40",
    "websockets>=12.0",
    "httpx>=0.27",
]

[project.scripts]
briocare = "briocare.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/briocare"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["UP042"]  # `class X(str, Enum)` is intentional for broad pydantic/JSON compatibility

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/briocare"]
